--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -5,14 +5,39 @@ copyright_license:
   allow_commercial: false
   notice: 'This work is licensed under {license}'
 
-theme: minimal
-day_night: true
-font: ''
-font_size: M
-site_type: Person
-local_business_type: ''
-org_name: ''
-description: ''
+# Appearance
+
+appearance:
+  theme_day: minimal
+  theme_night: minimal
+  font: minimal
+  font_size: M
+
+#theme: minimal
+#day_night: true
+#font: ''
+#font_size: M
+
+# SEO
+
+marketing:
+  seo:
+    site_type: Person
+    local_business_type: ''
+    org_name: ''
+    description: ''
+    twitter: 'synesthesia'
+  analytics:
+    google_analytics: 'UA-417495-1'
+    baidu_tongji: ''
+  verification:
+    google: ''
+    baidu: ''
+
+#site_type: Person
+#local_business_type: ''
+#org_name: ''
+#description: ''
 logo: ''
 highlight: true
 math: false
@@ -40,7 +65,7 @@ contact_links:
     link: 'https://twitter.com/Synesthesia'
 
 sharing_image: ''
-twitter: synesthesia
+#twitter: synesthesia
 date_format: 'Jan 2, 2006'
 time_format: '15:04'
 address_format: en-gb
@@ -135,6 +160,20 @@ cms:
 icon:
   pack:
     ai: true
+
+# Extensions
+
+extensions:
+  cms:
+    branch: master
+    local_backend: false
+  isotope:
+    # Enable if you use the Portfolio widget or Publication filter
+    enable: true
+  academicons:
+    enable: true
+
+
 security:
   csp:
     policy: >-
