--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,11 +1,33 @@
 title: Synesthesia
 #baseURL:
-copyright: '&copy; Julian Elve 2001 - {year}'
-disqusShortname: synesthesia-1
-enableGitInfo: true
+
+############################
+## LANGUAGE
+############################
+
 defaultContentLanguage: en
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
+removePathAccents: true
+
+############################
+## MODULES
+############################
+
+module:
+  imports:
+    - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify-cms
+    - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify
+    - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-reveal
+    - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy/v5
+
+############################
+## ADVANCED
+############################
+
+copyright: '&copy; Julian Elve 2001 - {year}'
+disqusShortname: synesthesia-1
+enableGitInfo: true
 paginate: 10
 enableEmoji: true
 footnotereturnlinkcontents: <sup>^</sup>
@@ -16,6 +38,16 @@ ignoreFiles:
   - \.Rmarkdown$
   - _files$
   - _cache$
+
+permalinks:
+  post: '/:year/:month/:day/:slug/'
+  note: '/note/:year/:month/:day/:slug/'
+  authors: '/author/:slug/'
+  tags: '/tag/:slug/'
+  categories: '/category/:slug/'
+  publication_types: '/publication-type/:slug/'
+  stream: '/stream/:slug/'
+
 outputs:
   home:
     - HTML
@@ -40,13 +72,18 @@ outputFormats:
     mediaType: application/manifest+json
     rel: manifest
 
+imaging:
+  resampleFilter: lanczos
+  quality: 90
+  anchor: smart
+timeout: 600000
 
-blackfriday:
-  hrefTargetBlank: true
-  angledQuotes: false
-  latexDashes: true
-  extensions:
-    - backslashLineBreak
+taxonomies:
+  tag: tags
+  category: categories
+  publication_type: publication_types
+  author: authors
+
 markup:
   defaultMarkdownHandler: goldmark
   goldmark:
@@ -57,27 +94,13 @@ markup:
   tableOfContents:
     startLevel: 2
     endLevel: 3
-imaging:
-  resampleFilter: lanczos
-  quality: 90
-  anchor: smart
-taxonomies:
-  tag: tags
-  category: categories
-  publication_type: publication_types
-  author: authors
-permalinks:
-  post: '/:year/:month/:day/:slug/'
-  note: '/note/:year/:month/:day/:slug/'
-  authors: '/author/:slug/'
-  tags: '/tag/:slug/'
-  categories: '/category/:slug/'
-  publication_types: '/publication-type/:slug/'
-  stream: '/stream/:slug/'
-module:
-  imports:
-    - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5
-    - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy-cms/v5
+
+blackfriday:
+  hrefTargetBlank: true
+  angledQuotes: false
+  latexDashes: true
+  extensions:
+    - backslashLineBreak
 
 frontmatter:
   date:
@@ -121,5 +144,13 @@ services:
   RSS:
     Limit: -1
 
-
+related:
+  threshold: 80
+  includeNewer: true
+  toLower: true
+  indices:
+    - name: tags
+      weight: 100
+    - name: categories
+      weight: 70
 
