--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -163,11 +163,11 @@ security:
     policy: >-
       default-src 'self'; frame-src utteranc.es *.youtube.com *.hypothes.is hypothes.is; connect-src
       'self' www.google-analytics.com; script-src 'self' 'unsafe-inline'
-      'unsafe-eval' cdn.jsdelivr.net utteranc.es *.google-analytics.com
+      'unsafe-eval' cdn.jsdelivr.net utteranc.es *.google-analytics.com www.google.com
       cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com *.hypothes.is hypothes.is;
-      style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com
+      style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com cdn.jsdelivr.net
       fonts.googleapis.com cdn.hypothes.is; img-src *; object-src 'self' data:; media-src *;
-      font-src *
+      font-src *; base-uri 'self'
     report_only: false
   permissions:
     policy: >-
