chore: update theme to main@c36731acb3dc (20220907214454)

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -89,11 +89,24 @@ markup:
   goldmark:
     renderer:
       unsafe: true
+    parser:
+      attribute:
+        block: true
+        title: true
   highlight:
-    codeFences: false
+    codeFences: true
+    noHl: false
+    lineNumbersInTable: false
+    noClasses: false
+    guessSyntax: true
   tableOfContents:
     startLevel: 2
     endLevel: 3
+minify:
+  tdewolff:
+    html:
+      keepComments: true
+
 
 blackfriday:
   hrefTargetBlank: true
