--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -26,7 +26,7 @@ marketing:
     local_business_type: ''
     org_name: ''
     description: ''
-    
+
   analytics:
     google_analytics: 'UA-417495-1'
     baidu_tongji: ''
@@ -161,8 +161,8 @@ extensions:
 security:
   csp:
     policy: >-
-      default-src 'self'; frame-src utteranc.es *.youtube.com *.hypothes.is hypothes.is www.gstatic.com; connect-src
-      'self' www.google-analytics.com; script-src 'self' 'unsafe-inline'
+      default-src 'self'; frame-src utteranc.es *.youtube.com *.hypothes.is hypothes.is www.gstatic.com www.gstatic.com/:0;
+      connect-src 'self' www.google-analytics.com; script-src 'self' 'unsafe-inline'
       'unsafe-eval' cdn.jsdelivr.net utteranc.es *.google-analytics.com www.google.com www.gstatic.com
       cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com *.hypothes.is hypothes.is;
       style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com cdn.jsdelivr.net
