--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -203,7 +203,7 @@ extensions:
 security:
   csp:
     policy: >-
-      default-src 'self'; frame-src utteranc.es *.youtube.com *.hypothes.is hypothes.is www.gstatic.com www.gstatic.com/:0;
+      default-src 'self'; frame-src *.synesthesia.co.uk  utteranc.es *.youtube.com *.hypothes.is hypothes.is www.gstatic.com www.gstatic.com/:0;
       connect-src 'self' www.google-analytics.com; script-src 'self' 'unsafe-inline'
       'unsafe-eval' cdn.jsdelivr.net utteranc.es *.google-analytics.com www.google.com www.gstatic.com
       cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com *.hypothes.is hypothes.is;
@@ -215,3 +215,5 @@ security:
     policy: >-
       accelerometer=(), camera=(), geolocation=(), gyroscope=(),
       magnetometer=(), microphone=(), payment=(), usb=()
+  # Allow frame for embedding speaker notes in slides
+  allow_frame: true
