--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -28,7 +28,8 @@ marketing:
     description: ''
 
   analytics:
-    google_analytics: 'UA-417495-1'
+    microsoft_clarity: 'er49ieyxog'
+    #google_analytics: 'UA-417495-1'
     baidu_tongji: ''
   verification:
     google: ''
@@ -215,3 +216,9 @@ security:
     policy: >-
       accelerometer=(), camera=(), geolocation=(), gyroscope=(),
       magnetometer=(), microphone=(), payment=(), usb=()
+
+
+power_ups:
+  hide_generator: true
+
+i_am_a_sponsor: true
