--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -19,7 +19,9 @@ module:
     - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify-cms
     - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify
     - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-reveal
+    - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-seo
     - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy/v5
+
 
 ############################
 ## ADVANCED
