--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -205,7 +205,7 @@ security:
       default-src 'self'; frame-src utteranc.es *.youtube.com *.hypothes.is hypothes.is www.gstatic.com www.gstatic.com/:0;
       connect-src 'self' www.google-analytics.com; script-src 'self' 'unsafe-inline'
       'unsafe-eval' cdn.jsdelivr.net utteranc.es *.google-analytics.com www.google.com www.gstatic.com
-      cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com *.hypothes.is hypothes.is;
+      cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com *.hypothes.is hypothes.is www.clarity.ms;
       style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com cdn.jsdelivr.net
       fonts.googleapis.com cdn.hypothes.is; img-src *; object-src 'self' data:; media-src *;
       font-src *; base-uri 'self';
