--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "plugins",
         "assets"
     ],
+    "editor.tabCompletion": "on",
     "eslint.alwaysShowStatus": true,
     "eslint.lintTask.enable": true,
     "eslint.packageManager": "yarn",
