--- a/.github/workflows/webmentions.yml
+++ b/.github/workflows/webmentions.yml
@@ -27,11 +27,11 @@ jobs:
           cache-version: v1
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-${{ env.cache-version }}-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-${{ env.cache-version }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.cache-version }}-
             ${{ runner.os }}-
-      - run: yarn install
+      - run: npm install
 
       # Fetch and process webmentions
       - name: Fetch webmentions
