--- a/netlify.toml
+++ b/netlify.toml
@@ -21,6 +21,12 @@
 	# If it should show more verbose logs (optional, default = true)
 	debug = true
 
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Clacks-Overhead = "GNU Terry Pratchett"
+
+
 [context.production.environment]
   HUGO_ENV = "production"
 
