--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,6 +15,11 @@
 			"NODE_VERSION": "18"
 		}
 	},
+	"features": {
+		"ghcr.io/devcontainers/features/go:1": {
+			"version": "1.20.5"
+		}
+	},
 
 	// Configure tool-specific properties.
 	"customizations": {
