--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -206,7 +206,7 @@ security:
       default-src 'self'; frame-src utteranc.es *.youtube.com *.hypothes.is hypothes.is www.gstatic.com www.gstatic.com/:0 *.clarity.ms c.bing.com;
       connect-src 'self' www.google-analytics.com d.clarity.ms;
       script-src 'self' 'unsafe-inline' 'unsafe-eval' cdn.jsdelivr.net utteranc.es *.google-analytics.com www.google.com www.gstatic.com
-      cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com *.hypothes.is hypothes.is www.clarity.ms;
+      cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com *.hypothes.is hypothes.is www.clarity.ms gist.github.com;
       style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com cdn.jsdelivr.net
       fonts.googleapis.com cdn.hypothes.is; img-src *; object-src 'self' data:; media-src *;
       font-src *; base-uri 'self';
