--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -208,7 +208,7 @@ security:
       script-src 'self' 'unsafe-inline' 'unsafe-eval' cdn.jsdelivr.net utteranc.es *.google-analytics.com www.google.com www.gstatic.com
       cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com *.hypothes.is hypothes.is www.clarity.ms gist.github.com;
       style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com cdn.jsdelivr.net
-      fonts.googleapis.com cdn.hypothes.is; img-src *; object-src 'self' data:; media-src *;
+      fonts.googleapis.com cdn.hypothes.is github.githubassets.com; img-src *; object-src 'self' data:; media-src *;
       font-src *; base-uri 'self';
     report_only: false
   permissions:
