fix: run in devcontainer as root allows sue from windows

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -77,13 +77,13 @@
 	],
 
 	// Use `updateContentCommand` to run commands in the prebuild
-    "updateContentCommand": "npm install",
+    //"updateContentCommand": "npm install",
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "uname -a",
-    //"postCreateCommand": "npm install",
+    "postCreateCommand": "npm install",
 
 
 	// Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "node"
+	"remoteUser": "root"
 }
