--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,7 @@
 [build.environment]
   HUGO_VERSION = "0.120.3"
   HUGO_ENABLEGITINFO = "true"
+  GO_VERSION = "1.21.3"
 
 [functions]
   # Specifies `esbuild` for functions bundling
